--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3"
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.3",
+    "dotenv": "^17.2.0"
   }
 }
