--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "vidly",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Carl Emil Zeidler",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
-    "dotenv": "^17.2.0"
+    "@types/helmet": "^0.0.48",
+    "@types/joi": "^17.2.2",
+    "dotenv": "^17.2.0",
+    "helmet": "^8.1.0",
+    "joi": "^17.13.3",
+    "nodemon": "^3.1.10"
   }
 }
