--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.mts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.mts"
   },
   "keywords": [],
   "author": "Carl Emil Zeidler",
@@ -21,6 +22,8 @@
     "dotenv": "^17.2.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
